==================== 2.25.0 ====================

2009-03-11  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bump version number to 2.25.0.

	* NEWS: Updated for 2.25.0.

2009-03-11  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Lametastic test for xdg.DesktopEntry, because my
	autoconf skills suck.  At least we check for that module now.

2009-02-11  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=471897

	* admin-tool/profilesdialog.py (Session.build_envp_for_child):
	Also put XAUTHLOCALHOSTNAME in the environment, so that the child
	session can start.  Patch by Michael Meeks <michael.meeks@novell.com>

2009-02-05  Andre Klapper  <a9016009@gmx.de>

	* configure.ac:
	* lib/dirmonitor.py:
	Port to GIO. Patch by Evan Briones. Fixes bug #527541.

2009-01-24  Philip Withnall  <philip@tecnocode.co.uk>

	* admin-tool/lockdown/maindialog.py: Make a string a little clearer.
	* lib/userdb.py: Fix a typo in a string. (Closes: #528253)

2009-01-12  Federico Mena Quintero  <federico@novell.com>

	* lib/config.py.in (DIRECTORIES_TO_IGNORE): Add .pulse to the
	directories to ignore.

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: remove old intltool cruft
	* configure.ac: require intltool 0.40.0

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.2.

==================== 2.22.1 ====================

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.ac: version 2.22.1

2008-06-25  Michael Meeks  <michael.meeks@novell.com>

	* admin-tool/Makefile.am, admin-tool/sabayon-xinitrc.sh.in:
	don't spawn a whole python process / bootstrap to check for
	a single file - when we can do that in the shell script
	wrapper for free: hugely improves login performance with
	sabayon running.

==================== 2.20.0 ====================

2008-03-11  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bump version number to 2.22.0.
